--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "yup-oauth2"
-version = "1.0.5"
+version = "1.0.7"
 authors = ["Sebastian Thiel <byronimo@gmail.com>", "Lewin Bormann <lbo@spheniscida.de>"]
 repository = "https://github.com/dermesser/yup-oauth2"
 description = "An oauth2 implementation, providing the 'device', 'service account' and 'installed' authorization flows"
@@ -10,19 +10,15 @@ keywords = ["google", "oauth", "v2"]
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-base64 = "0.5.2"
-chrono = "0.2"
-hyper = "0.10.2"
-hyper-rustls = "0.6.1"
-itertools = "0.4"
+base64 = "0.8"
+chrono = "0.4"
+hyper = "0.11"
+hyper-rustls = "0.11"
+itertools = "0.7"
+futures = "0.1"
 log = "0.3"
-rustls = "0.9.0"
+rustls = "0.11.0"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
-url = "0.5"
-
-[dev-dependencies]
-getopts = "0.2"
-open = "1.1"
-yup-hyper-mock = "2.0"
+url = "1.6"
