--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ itertools = "0.7"
 futures = "0.1"
 log = "0.3"
 rustls = "0.11.0"
+reqwest = "0.8.1"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
